--- a/index.html
+++ b/index.html
@@ -393,13 +393,13 @@
                         <button class="btn btn--green modal__submit" type="submit">Обменять
                         </button>
                         <!-- Сообщение, которое нужно показать в случае неудачной отправки данных -->
-                        <p class="modal__validation-message modal__validation-message--error">
+                        <p class="modal__validation-message modal__validation-message--error" style="display: none;">
                             <svg width="20" height="20" aria-hidden="true">
                                 <use xlink:href="#icon-error"></use>
                             </svg>Ошибка заполнения формы
                         </p>
                         <!-- Сообщение, которое нужно показать в случае успешной отправки данных -->
-                        <p class="modal__validation-message modal__validation-message--success">
+                        <p class="modal__validation-message modal__validation-message--success" style="display: none;">
                             <svg width="20" height="20" aria-hidden="true">
                                 <use xlink:href="#icon-success"></use>
                             </svg>Данные успешно отправлены
@@ -529,13 +529,13 @@
                         <button class="btn btn--green modal__submit" type="submit">Обменять
                         </button>
                         <!-- Сообщение, которое нужно показать в случае неудачной отправки данных -->
-                        <p class="modal__validation-message modal__validation-message--error">
+                        <p class="modal__validation-message modal__validation-message--error" style="display: none;">
                             <svg width="20" height="20" aria-hidden="true">
                                 <use xlink:href="#icon-error"></use>
                             </svg>Ошибка заполнения формы
                         </p>
                         <!-- Сообщение, которое нужно показать в случае успешной отправки данных -->
-                        <p class="modal__validation-message modal__validation-message--success">
+                        <p class="modal__validation-message modal__validation-message--success" style="display: none;">
                             <svg width="20" height="20" aria-hidden="true">
                                 <use xlink:href="#icon-success"></use>
                             </svg>Данные успешно отправлены
